index.html: - Updated nav bar links to point to the correct sections - Linked the id's for the banner container and banner subtitle - Added id to the about me section for in document linking - Wrapped the portfolio-section h1 tags in the aside class to format the text seperate from the space it takes up - changed the h1 tags under the Contact Me section to be h2
style.css:
- Changed the font-size of h1 to be 48px instead of 64px
- Changed the .portfolio-titles class to justify-content right instead of text-align, since the h1 is now contained within the aside container
- Added styling to the .portfolio-subsection class
- Updated the .portfolio-subsection figure class to have a larger margin
- Updated the firstchild class to use a flex basis of 60% ensuring it always takes up one flex row
- created the header-name, banner-subtitle, and banner-container id's
- Added styling for mobile view by hiding the banner-container id and renaming the .subtitle class to .heading-name

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ header{
 }
 
 h1{
-    font-size: 64px;
+    font-size: 48px;
     color: gray;
 }
 
@@ -69,8 +69,8 @@ main{
 /* Handles flex styling for each portfolio title element */
 .portfolio-titles{
     display:flex;
+    justify-content: right;
     border-right: 10px solid slategray;
-    text-align: right;
     flex-basis: 20%;
 }
 
@@ -78,18 +78,20 @@ main{
     display: flex;
     flex-basis: 80%;
     flex-wrap: wrap;
+    margin: 30px;
+    justify-content: space-around;
 }
 
 .portfolio-subsection figure{
     display: flex;
     flex: 1 1 40%;
     height: 250px;
-    margin: 30px;
+    margin: 15px;
     justify-content: center;
 }
 
 .portfolio-subsection figure:first-child{
-    flex: 5 5 50%;
+    flex: 5 5 60%;
     height: 550px;
 }
 
@@ -99,7 +101,30 @@ main{
     border: var(--border-width) solid skyblue;
 }
 
+#header-name{
+    display:flex;
+    flex-basis: 40px;
+    text-align: right;
+    margin-right: 5px;
+}
 
+#banner-subtitle{
+    display: flex;
+    position: absolute;
+    background: teal;
+    padding:5px;
+    right:10px;
+    bottom:10px;
+    font-family: monospace;
+    font-size: 24px;
+}
+
+/* Used as a root for the subtitle text */
+#banner-container{
+    display: flex;
+    position: relative;
+    overflow: clip;
+}
 
 /* Styles the site in a column layout when the screen width is less than 768px */
 @media  screen and (max-width: 768px) {
@@ -125,7 +150,7 @@ main{
         border-right: 0px;
     }
 
-    .subtitle{
+    .heading-name{
         align-self: center;
     }
 
@@ -133,5 +158,9 @@ main{
         display: flex;
         flex-grow: 1;
         height: 250px;
+    }
+
+    #banner-container{
+        display:none;
     }
 }
